--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -23,8 +23,171 @@ pt-BR:
         data_inicio: "Data do Início do tratamento"
         esquema_terapeutico: "Esquema Terapêutico"
         dados_clinicos: "Dados Clínicos"
+        notificacao_contatoes: "Contatos"
+        avaliacao_notificacaos: "Avaliações"
+        esquema_substitutivos: "Esquemas Substitutivos"
+        episodio_reacionals: "Episódios Reacionais"
       dados_clinicos:
         lesoes_cultaneas: "Dados Clínicos - Lesões cultâneas"
+        forma_clinica: "Dados Clínicos - Forma Clínica"
+        classificacao_operacional: "Dados Clínicos - Classificação Operacional"
+        nervos_afetados: "Dados Clínicos - Nervos Afetados"
+      notificacao_contatoes:
+        nome: "Contato - Nome"
+        tipo_contato: "Contato - Tipo de contato"
+        suspeito: "Contato - Suspeito"
+        confirmado: "Contato - Confirmado"
+        bcg_primeira: "Contato - BCG Primeira Dose"
+        bcg_segunda: "Contato - BCG Segunda Dose"
+        bcg_cicatriz: "Contato - BCG Cicatriz"
+      avaliacao_notificacaos:
+        classificacao_operacional: "Avaliação - Classificação Operacional"
+        inicio_pqt: "Avaliação - Início PQT"
+        alta_pqt: "Avaliação - Alta PQT"
+        profissao: "Avaliação - Profissão"
+        unidade_saude: "Avaliação - Unidade de Saúde"
+        atividades_realizadas_ubs: "Avaliação - Atividade Realizadas na UBS"
+        grupo_autocuidado: "Avaliação - Participação em grupo de autocuidade"
+        encaminhamentos: "Avaliação - Encaminhamentos"
+        imobilizacoes: "Avaliação - Imobilizações"
+        adaptacoes: "Avaliação - Adaptações"
+        observacoes: "Avaliação - Observações"
+        atividades_orientadas: "Avaliação - Atividades Orientadas"
+      avaliacao_notificacao:
+        classificacao_operacional: "Avaliação - Classificação Operacional"
+        inicio_pqt: "Avaliação - Início PQT"
+        alta_pqt: "Avaliação - Alta PQT"
+        profissao: "Avaliação - Profissão"
+        unidade_saude: "Avaliação - Unidade de Saúde"
+        atividades_realizadas_ubs: "Avaliação - Atividade Realizadas na UBS"
+        grupo_autocuidado: "Avaliação - Participação em grupo de autocuidade"
+        encaminhamentos: "Avaliação - Encaminhamentos"
+        imobilizacoes: "Avaliação - Imobilizações"
+        adaptacoes: "Avaliação - Adaptações"
+        observacoes: "Avaliação - Observações"
+        atividades_orientadas: "Avaliação - Atividades Orientadas"
+      esquema_substitutivos:
+        medicamento: "Esquema Substitutivo - Medicamento"
+        miligramas: "Esquema Substitutivo - Miligramas"
+      episodio_reacionals:
+        tipo: "Episódio Reacional - Tipo"
+        numero_episodios: "Episódio Reacional - Número de episódios"
+        conduta_mendicamentosa: "Episódio Reacional - Conduta Medicamentosa"
+        data_inicio: "Episódio Reacional - Data de Início"
+        data_termino: "Episódio Reacional - Data de Término"
+      avaliacao_notificacaos/avaliacao_neurologicas:
+        data: "Avaliação Neurológica - Data"
+        olhos_sem_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos sem força - D"
+        olhos_sem_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos sem força - E"
+        olhos_com_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos com força - D"
+        olhos_com_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos com força - E"
+        triquiase_d: "Avaliação Neurológica - Olhos - Triquíase - D"
+        triquiase_e: "Avaliação Neurológica - Olhos - Triquíase - E"
+        ectropio_d: "Avaliação Neurológica - Olhos - Ectrópio - D"
+        ectropio_e: "Avaliação Neurológica - Olhos - Ectrópio - E"
+        catarata_d: "Avaliação Neurológica - Olhos - Catarata - D"
+        catarata_e: "Avaliação Neurológica - Olhos - Catarata - E"
+        sensibilidade_cornea_d: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - D"
+        sensibilidade_cornea_e: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - E"
+        opacidade_corneana_d: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - D"
+        opacidade_corneana_e: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - E"
+        acuidade_visual_d: "Avaliação Neurológica - Olhos - Acuidade Visual - D"
+        acuidade_visual_e: "Avaliação Neurológica - Olhos - Acuidade Visual - E"
+        ressecamento_d: "Avaliação Neurológica - Nariz - Ressecamento - D"
+        ressecamento_e: "Avaliação Neurológica - Nariz - Ressecamento - E"
+        feridas_d: "Avaliação Neurológica - Nariz - Feridas - D"
+        feridas_e: "Avaliação Neurológica - Nariz - Feridas - E"
+        perfuracao_septo_d: "Avaliação Neurológica - Nariz - Perfuração de septo - D"
+        perfuracao_septo_e: "Avaliação Neurológica - Nariz - Perfuração de septo - E"
+        nervo_radial_d: "Avaliação Neurológica - Membros Superiores - Nervo Radial - D"
+        nervo_radial_e: "Avaliação Neurológica - Membros Superiores - Nervo Radial - E"
+        nervo_ulnar_d: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - D"
+        nervo_ulnar_e: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - E"
+        nervo_mediano_d: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - D"
+        nervo_mediano_e: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - E"
+        abducao_5_dedo_d: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - D"
+        abducao_5_dedo_e: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - E"
+        abducao_polegar_d: "Avaliação Neurológica - Membros Superiores - Abdução do polegar - D"
+        abducao_polegar_e : "Avaliação Neurológica - Membros Superiores - Abdução do polegar - E"
+        extensores_punho_d: "Avaliação Neurológica - Membros Superiores - Extensores do punho - D"
+        extensores_punho_e: "Avaliação Neurológica - Membros Superiores - Extensores do punho - E"
+        nervo_fibular_d: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - D"
+        nervo_fibular_e: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - E"
+        nervo_tibial_d: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - D"
+        nervo_tibial_e: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - E"
+        extensao_halux_d: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - D"
+        extensao_halux_e: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - E"
+        dorsiflexao_pe_d: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+        dorsiflexao_pe_e: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+      avaliacao_neurologicas:
+        data: "Avaliação Neurológica - Data"
+        olhos_sem_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos sem força - D"
+        olhos_sem_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos sem força - E"
+        olhos_com_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos com força - D"
+        olhos_com_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos com força - E"
+        triquiase_d: "Avaliação Neurológica - Olhos - Triquíase - D"
+        triquiase_e: "Avaliação Neurológica - Olhos - Triquíase - E"
+        ectropio_d: "Avaliação Neurológica - Olhos - Ectrópio - D"
+        ectropio_e: "Avaliação Neurológica - Olhos - Ectrópio - E"
+        catarata_d: "Avaliação Neurológica - Olhos - Catarata - D"
+        catarata_e: "Avaliação Neurológica - Olhos - Catarata - E"
+        sensibilidade_cornea_d: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - D"
+        sensibilidade_cornea_e: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - E"
+        opacidade_corneana_d: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - D"
+        opacidade_corneana_e: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - E"
+        acuidade_visual_d: "Avaliação Neurológica - Olhos - Acuidade Visual - D"
+        acuidade_visual_e: "Avaliação Neurológica - Olhos - Acuidade Visual - E"
+        ressecamento_d: "Avaliação Neurológica - Nariz - Ressecamento - D"
+        ressecamento_e: "Avaliação Neurológica - Nariz - Ressecamento - E"
+        feridas_d: "Avaliação Neurológica - Nariz - Feridas - D"
+        feridas_e: "Avaliação Neurológica - Nariz - Feridas - E"
+        perfuracao_septo_d: "Avaliação Neurológica - Nariz - Perfuração de septo - D"
+        perfuracao_septo_e: "Avaliação Neurológica - Nariz - Perfuração de septo - E"
+        nervo_radial_d: "Avaliação Neurológica - Membros Superiores - Nervo Radial - D"
+        nervo_radial_e: "Avaliação Neurológica - Membros Superiores - Nervo Radial - E"
+        nervo_ulnar_d: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - D"
+        nervo_ulnar_e: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - E"
+        nervo_mediano_d: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - D"
+        nervo_mediano_e: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - E"
+        abducao_5_dedo_d: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - D"
+        abducao_5_dedo_e: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - E"
+        abducao_polegar_d: "Avaliação Neurológica - Membros Superiores - Abdução do polegar - D"
+        abducao_polegar_e : "Avaliação Neurológica - Membros Superiores - Abdução do polegar - E"
+        extensores_punho_d: "Avaliação Neurológica - Membros Superiores - Extensores do punho - D"
+        extensores_punho_e: "Avaliação Neurológica - Membros Superiores - Extensores do punho - E"
+        nervo_fibular_d: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - D"
+        nervo_fibular_e: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - E"
+        nervo_tibial_d: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - D"
+        nervo_tibial_e: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - E"
+        extensao_halux_d: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - D"
+        extensao_halux_e: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - E"
+        dorsiflexao_pe_d: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+        dorsiflexao_pe_e: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+      avaliacao_notificacaos/classificacao_graus:
+        data: "Classificação do Grau - Data"
+        olho_direito: "Classificação do Grau - Olho Direito"
+        olho_esquerdo: "Classificação do Grau - Olho Esquerdo"
+        mao_direita: "Classificação do Grau - Mão Direita"
+        mao_esqueda: "Classificação do Grau - Mão Esquerda"
+        pe_direito: "Classificação do Grau - Pé Direito"
+        pe_esquerdo: "Classificação do Grau - Pé Esquerdo"
+        maior_grau: "Classificação do Grau - Maior Grau"
+        escore_omp: "Classificação do Grau - Escore OMP"
+      classificacao_graus:
+        data: "Classificação do Grau - Data"
+        olho_direito: "Classificação do Grau - Olho Direito"
+        olho_esquerdo: "Classificação do Grau - Olho Esquerdo"
+        mao_direita: "Classificação do Grau - Mão Direita"
+        mao_esqueda: "Classificação do Grau - Mão Esquerda"
+        pe_direito: "Classificação do Grau - Pé Direito"
+        pe_esquerdo: "Classificação do Grau - Pé Esquerdo"
+        maior_grau: "Classificação do Grau - Maior Grau"
+        escore_omp: "Classificação do Grau - Escore OMP"
+
+
+
+
+
 
 
   errors:
