--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -183,6 +183,41 @@ pt-BR:
         pe_esquerdo: "Classificação do Grau - Pé Esquerdo"
         maior_grau: "Classificação do Grau - Maior Grau"
         escore_omp: "Classificação do Grau - Escore OMP"
+      avaliacao_sensitiva:
+        dedao_direito: "Mão Direita - Hálux"
+        indicador_d_ponta: "Mão Direita - Dedo Indicador Falange Distal"
+        indicador_d: "Mão Direita - Dedo Indicador Falange Proximal"
+        mindinho_d_ponta: "Mão Direita - V Dedo Falange Distal"
+        mindinho_d: "Mão Direita - V Dedo Falange Proximal"
+        mao_direita: "Mão Direita - V Metacarpo"
+        mao_d_costa: "Mão Direita - Dorso da mão"
+        dedao_esquerdo: "Mão Esquerda - Hálux"
+        indicador_e_ponta: "Mão Esquerda - Dedo Indicador Falange Distal"
+        indicador_e: "Mão Esquerda - Dedo Indicador Falange Proximal"
+        mindinho_e_ponta: "Mão Esquerda - V Dedo Falange Distal"
+        mindinho_e: "Mão Esquerda - V Dedo Falange Proximal"
+        mao_esquerda: "Mão Esquerda - V Metacarpo"
+        mao_e_costa: "Mão Esquerda - Dorso da mão"
+        pe_direito: "Pé Direito - Dorso do pé"
+        pe_d_1_ponta: "Pé Direito - Hálux"
+        pe_d_3_ponta: "Pé Direito - III Dedo Falange Distal"
+        pe_d_5_ponta: "Pé Direito - V Dedo Falange Distal"
+        pe_d_1: "Pé Direito - I Metatarso"
+        pe_d_3: "Pé Direito - III Metatarso"
+        pe_d_5: "Pé Direito - V Metatarso"
+        pe_d_e1: "Pé Direito - Face lateral(planta do pé)"
+        pe_d_calcanhar: "Pé Direito - Calcâneo"
+        pe_esquerdo: "Pé Esquerdo - Dorso do pé"
+        pe_e_1_ponta: "Pé Esquerdo - Hálux"
+        pe_e_3_ponta: "Pé Esquerdo - III Dedo Falange Distal"
+        pe_e_5_ponta: "Pé Esquerdo - V Dedo Falange Distal"
+        pe_e_1: "Pé Esquerdo - I Metatarso"
+        pe_e_3: "Pé Esquerdo - III Metatarso"
+        pe_e_5: "Pé Esquerdo - V Metatarso"
+        pe_e_e1: "Pé Esquerdo - Face lateral(planta do pé)"
+        pe_e_e2: "Pé Esquerdo - Arco Plantar"
+        pe_e_calcanhar: "Pé Esquerdo - Calcâneo"
+        pe_d_e2: "Pé Direito - Arco Plantar"
 
 
 
