--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,12 +1,344 @@
----
 pt-BR:
   activerecord:
+    models:
+      notificacao: "Notificacao"
+      dados_clinico: "Dados Clínicos"
+      notificacao/dados_clinicos: "Dados Clínicos"
+      notificacao/avaliacao_notificacaos: "Avaliação"
+      avaliacao_notificacao: "Avaliação"
+      imunizacao_solicitacao: "Solicitação"
+    attributes:
+      notificacao:
+        numero: "Número"
+        grau_incapacidade: "Gráu incapacidade"
+        modo_entrada: "Modo de entrada"
+        modo_deteccao: "Modo de detecção"
+        observacoes: "Observações"
+        data_inicio: "Data do Início do tratamento"
+        esquema_terapeutico: "Esquema Terapêutico"
+        dados_clinicos: "Dados Clínicos"
+        notificacao_contatoes: "Contatos"
+        avaliacao_notificacaos: "Avaliações"
+        esquema_substitutivos: "Esquemas Substitutivos"
+        episodio_reacionals: "Episódios Reacionais"
+      dados_clinicos:
+        lesoes_cultaneas: "Dados Clínicos - Lesões cultâneas"
+        forma_clinica: "Dados Clínicos - Forma Clínica"
+        classificacao_operacional: "Dados Clínicos - Classificação Operacional"
+        nervos_afetados: "Dados Clínicos - Nervos Afetados"
+      notificacao_contatoes:
+        nome: "Contato - Nome"
+        tipo_contato: "Contato - Tipo de contato"
+        suspeito: "Contato - Suspeito"
+        confirmado: "Contato - Confirmado"
+        bcg_primeira: "Contato - BCG Primeira Dose"
+        bcg_segunda: "Contato - BCG Segunda Dose"
+        bcg_cicatriz: "Contato - BCG Cicatriz"
+      avaliacao_notificacaos:
+        classificacao_operacional: "Avaliação - Classificação Operacional"
+        inicio_pqt: "Avaliação - Início PQT"
+        alta_pqt: "Avaliação - Alta PQT"
+        profissao: "Avaliação - Profissão"
+        unidade_saude: "Avaliação - Unidade de Saúde"
+        atividades_realizadas_ubs: "Avaliação - Atividade Realizadas na UBS"
+        grupo_autocuidado: "Avaliação - Participação em grupo de autocuidade"
+        encaminhamentos: "Avaliação - Encaminhamentos"
+        imobilizacoes: "Avaliação - Imobilizações"
+        adaptacoes: "Avaliação - Adaptações"
+        observacoes: "Avaliação - Observações"
+        atividades_orientadas: "Avaliação - Atividades Orientadas"
+      avaliacao_notificacao:
+        classificacao_operacional: "Avaliação - Classificação Operacional"
+        inicio_pqt: "Avaliação - Início PQT"
+        alta_pqt: "Avaliação - Alta PQT"
+        profissao: "Avaliação - Profissão"
+        unidade_saude: "Avaliação - Unidade de Saúde"
+        atividades_realizadas_ubs: "Avaliação - Atividade Realizadas na UBS"
+        grupo_autocuidado: "Avaliação - Participação em grupo de autocuidade"
+        encaminhamentos: "Avaliação - Encaminhamentos"
+        imobilizacoes: "Avaliação - Imobilizações"
+        adaptacoes: "Avaliação - Adaptações"
+        observacoes: "Avaliação - Observações"
+        atividades_orientadas: "Avaliação - Atividades Orientadas"
+      esquema_substitutivos:
+        medicamento: "Esquema Substitutivo - Medicamento"
+        miligramas: "Esquema Substitutivo - Miligramas"
+      episodio_reacionals:
+        tipo: "Episódio Reacional - Tipo"
+        numero_episodios: "Episódio Reacional - Número de episódios"
+        conduta_mendicamentosa: "Episódio Reacional - Conduta Medicamentosa"
+        data_inicio: "Episódio Reacional - Data de Início"
+        data_termino: "Episódio Reacional - Data de Término"
+      avaliacao_notificacaos/avaliacao_neurologicas:
+        data: "Avaliação Neurológica - Data"
+        olhos_sem_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos sem força - D"
+        olhos_sem_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos sem força - E"
+        olhos_com_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos com força - D"
+        olhos_com_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos com força - E"
+        triquiase_d: "Avaliação Neurológica - Olhos - Triquíase - D"
+        triquiase_e: "Avaliação Neurológica - Olhos - Triquíase - E"
+        ectropio_d: "Avaliação Neurológica - Olhos - Ectrópio - D"
+        ectropio_e: "Avaliação Neurológica - Olhos - Ectrópio - E"
+        catarata_d: "Avaliação Neurológica - Olhos - Catarata - D"
+        catarata_e: "Avaliação Neurológica - Olhos - Catarata - E"
+        sensibilidade_cornea_d: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - D"
+        sensibilidade_cornea_e: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - E"
+        opacidade_corneana_d: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - D"
+        opacidade_corneana_e: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - E"
+        acuidade_visual_d: "Avaliação Neurológica - Olhos - Acuidade Visual - D"
+        acuidade_visual_e: "Avaliação Neurológica - Olhos - Acuidade Visual - E"
+        ressecamento_d: "Avaliação Neurológica - Nariz - Ressecamento - D"
+        ressecamento_e: "Avaliação Neurológica - Nariz - Ressecamento - E"
+        feridas_d: "Avaliação Neurológica - Nariz - Feridas - D"
+        feridas_e: "Avaliação Neurológica - Nariz - Feridas - E"
+        perfuracao_septo_d: "Avaliação Neurológica - Nariz - Perfuração de septo - D"
+        perfuracao_septo_e: "Avaliação Neurológica - Nariz - Perfuração de septo - E"
+        nervo_radial_d: "Avaliação Neurológica - Membros Superiores - Nervo Radial - D"
+        nervo_radial_e: "Avaliação Neurológica - Membros Superiores - Nervo Radial - E"
+        nervo_ulnar_d: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - D"
+        nervo_ulnar_e: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - E"
+        nervo_mediano_d: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - D"
+        nervo_mediano_e: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - E"
+        abducao_5_dedo_d: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - D"
+        abducao_5_dedo_e: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - E"
+        abducao_polegar_d: "Avaliação Neurológica - Membros Superiores - Abdução do polegar - D"
+        abducao_polegar_e : "Avaliação Neurológica - Membros Superiores - Abdução do polegar - E"
+        extensores_punho_d: "Avaliação Neurológica - Membros Superiores - Extensores do punho - D"
+        extensores_punho_e: "Avaliação Neurológica - Membros Superiores - Extensores do punho - E"
+        nervo_fibular_d: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - D"
+        nervo_fibular_e: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - E"
+        nervo_tibial_d: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - D"
+        nervo_tibial_e: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - E"
+        extensao_halux_d: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - D"
+        extensao_halux_e: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - E"
+        dorsiflexao_pe_d: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+        dorsiflexao_pe_e: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+      avaliacao_neurologicas:
+        data: "Avaliação Neurológica - Data"
+        olhos_sem_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos sem força - D"
+        olhos_sem_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos sem força - E"
+        olhos_com_forca_d: "Avaliação Neurológica - Olhos - Fecha olhos com força - D"
+        olhos_com_forca_e: "Avaliação Neurológica - Olhos - Fecha olhos com força - E"
+        triquiase_d: "Avaliação Neurológica - Olhos - Triquíase - D"
+        triquiase_e: "Avaliação Neurológica - Olhos - Triquíase - E"
+        ectropio_d: "Avaliação Neurológica - Olhos - Ectrópio - D"
+        ectropio_e: "Avaliação Neurológica - Olhos - Ectrópio - E"
+        catarata_d: "Avaliação Neurológica - Olhos - Catarata - D"
+        catarata_e: "Avaliação Neurológica - Olhos - Catarata - E"
+        sensibilidade_cornea_d: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - D"
+        sensibilidade_cornea_e: "Avaliação Neurológica - Olhos - Dimin. Sensibilidade da Córnea - E"
+        opacidade_corneana_d: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - D"
+        opacidade_corneana_e: "Avaliação Neurológica - Olhos - Opacidade Corneana Central - E"
+        acuidade_visual_d: "Avaliação Neurológica - Olhos - Acuidade Visual - D"
+        acuidade_visual_e: "Avaliação Neurológica - Olhos - Acuidade Visual - E"
+        ressecamento_d: "Avaliação Neurológica - Nariz - Ressecamento - D"
+        ressecamento_e: "Avaliação Neurológica - Nariz - Ressecamento - E"
+        feridas_d: "Avaliação Neurológica - Nariz - Feridas - D"
+        feridas_e: "Avaliação Neurológica - Nariz - Feridas - E"
+        perfuracao_septo_d: "Avaliação Neurológica - Nariz - Perfuração de septo - D"
+        perfuracao_septo_e: "Avaliação Neurológica - Nariz - Perfuração de septo - E"
+        nervo_radial_d: "Avaliação Neurológica - Membros Superiores - Nervo Radial - D"
+        nervo_radial_e: "Avaliação Neurológica - Membros Superiores - Nervo Radial - E"
+        nervo_ulnar_d: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - D"
+        nervo_ulnar_e: "Avaliação Neurológica - Membros Superiores - Nervo Ulnar - E"
+        nervo_mediano_d: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - D"
+        nervo_mediano_e: "Avaliação Neurológica - Membros Superiores - Nervo Mediano - E"
+        abducao_5_dedo_d: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - D"
+        abducao_5_dedo_e: "Avaliação Neurológica - Membros Superiores - Abdução do 5º dedo - E"
+        abducao_polegar_d: "Avaliação Neurológica - Membros Superiores - Abdução do polegar - D"
+        abducao_polegar_e : "Avaliação Neurológica - Membros Superiores - Abdução do polegar - E"
+        extensores_punho_d: "Avaliação Neurológica - Membros Superiores - Extensores do punho - D"
+        extensores_punho_e: "Avaliação Neurológica - Membros Superiores - Extensores do punho - E"
+        nervo_fibular_d: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - D"
+        nervo_fibular_e: "Avaliação Neurológica - Membros Inferiores - Nervo Fibular - E"
+        nervo_tibial_d: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - D"
+        nervo_tibial_e: "Avaliação Neurológica - Membros Inferiores - Nervo Tibial - E"
+        extensao_halux_d: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - D"
+        extensao_halux_e: "Avaliação Neurológica - Membros Inferiores - Extensão Hálux - E"
+        dorsiflexao_pe_d: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+        dorsiflexao_pe_e: "Avaliação Neurológica - Membros Inferiores - Dorsiflexão do pé - D"
+      avaliacao_notificacaos/classificacao_graus:
+        data: "Classificação do Grau - Data"
+        olho_direito: "Classificação do Grau - Olho Direito"
+        olho_esquerdo: "Classificação do Grau - Olho Esquerdo"
+        mao_direita: "Classificação do Grau - Mão Direita"
+        mao_esqueda: "Classificação do Grau - Mão Esquerda"
+        pe_direito: "Classificação do Grau - Pé Direito"
+        pe_esquerdo: "Classificação do Grau - Pé Esquerdo"
+        maior_grau: "Classificação do Grau - Maior Grau"
+        escore_omp: "Classificação do Grau - Escore OMP"
+      classificacao_graus:
+        data: "Classificação do Grau - Data"
+        olho_direito: "Classificação do Grau - Olho Direito"
+        olho_esquerdo: "Classificação do Grau - Olho Esquerdo"
+        mao_direita: "Classificação do Grau - Mão Direita"
+        mao_esqueda: "Classificação do Grau - Mão Esquerda"
+        pe_direito: "Classificação do Grau - Pé Direito"
+        pe_esquerdo: "Classificação do Grau - Pé Esquerdo"
+        maior_grau: "Classificação do Grau - Maior Grau"
+        escore_omp: "Classificação do Grau - Escore OMP"
+      avaliacao_sensitiva:
+        dedao_direito: "Mão Direita - Hálux"
+        indicador_d_ponta: "Mão Direita - Dedo Indicador Falange Distal"
+        indicador_d: "Mão Direita - Dedo Indicador Falange Proximal"
+        mindinho_d_ponta: "Mão Direita - V Dedo Falange Distal"
+        mindinho_d: "Mão Direita - V Dedo Falange Proximal"
+        mao_direita: "Mão Direita - V Metacarpo"
+        mao_d_costa: "Mão Direita - Dorso da mão"
+        dedao_esquerdo: "Mão Esquerda - Hálux"
+        indicador_e_ponta: "Mão Esquerda - Dedo Indicador Falange Distal"
+        indicador_e: "Mão Esquerda - Dedo Indicador Falange Proximal"
+        mindinho_e_ponta: "Mão Esquerda - V Dedo Falange Distal"
+        mindinho_e: "Mão Esquerda - V Dedo Falange Proximal"
+        mao_esquerda: "Mão Esquerda - V Metacarpo"
+        mao_e_costa: "Mão Esquerda - Dorso da mão"
+        pe_direito: "Pé Direito - Dorso do pé"
+        pe_d_1_ponta: "Pé Direito - Hálux"
+        pe_d_3_ponta: "Pé Direito - III Dedo Falange Distal"
+        pe_d_5_ponta: "Pé Direito - V Dedo Falange Distal"
+        pe_d_1: "Pé Direito - I Metatarso"
+        pe_d_3: "Pé Direito - III Metatarso"
+        pe_d_5: "Pé Direito - V Metatarso"
+        pe_d_e1: "Pé Direito - Face lateral(planta do pé)"
+        pe_d_calcanhar: "Pé Direito - Calcâneo"
+        pe_esquerdo: "Pé Esquerdo - Dorso do pé"
+        pe_e_1_ponta: "Pé Esquerdo - Hálux"
+        pe_e_3_ponta: "Pé Esquerdo - III Dedo Falange Distal"
+        pe_e_5_ponta: "Pé Esquerdo - V Dedo Falange Distal"
+        pe_e_1: "Pé Esquerdo - I Metatarso"
+        pe_e_3: "Pé Esquerdo - III Metatarso"
+        pe_e_5: "Pé Esquerdo - V Metatarso"
+        pe_e_e1: "Pé Esquerdo - Face lateral(planta do pé)"
+        pe_e_e2: "Pé Esquerdo - Arco Plantar"
+        pe_e_calcanhar: "Pé Esquerdo - Calcâneo"
+        pe_d_e2: "Pé Direito - Arco Plantar"
     errors:
       messages:
-        record_invalid: 'A validação falhou: %{errors}'
-        restrict_dependent_destroy:
-          has_one: Não é possível excluir o registro pois existe um %{record} dependente
-          has_many: Não é possível excluir o registro pois existem %{record} dependentes
+        blank: "Campo em branco"
+        expired: 'expirou, por favor solicite um novo'
+        not_found: 'não encontrado'
+        already_confirmed: 'já foi confirmado, por favor tente fazer login'
+        not_a_number: "Não é um número"
+        not_an_integer: "Não é um número inteiro"
+        not_saved:
+          one: "1 erro impediu atualização"
+          other: "%{count} erros"
+  enumerize:
+    defaults:
+      grau_incapacidade:
+        grau_1: "Grau 1"
+        grau_2: "Grau 2"
+        grau_0: "Grau 0"
+        nao_avaliado: "Não Avaliado"
+      grau_incapacidade_alta:
+        grau_1: "Grau 1"
+        grau_2: "Grau 2"
+        grau_0: "Grau 0"
+        nao_avaliado: "Não Avaliado"
+      grau_incapacidade_suspeita:
+        grau_1: "Grau 1"
+        grau_2: "Grau 2"
+        grau_0: "Grau 0"
+        nao_avaliado: "Não Avaliado"
+      modo_entrada:
+        caso_novo: "Caso Novo"
+        outra_unidade: "Transferência do mesmo município (outra unidade)"
+        outro_municipio: "Transferência de outro município (mesma uf)"
+        outro_estado: "Transferência de outro estado"
+        outro_pais: "Transferência de outro país"
+        recidiva: "Recidiva"
+        outros_reingressos: "Outros Reingressos"
+      modo_deteccao:
+        encaminhamento: "Encaminhamento"
+        demanda_expontanea: "Demanda Expontânea"
+        exame_coletividade: "Exame de Coletividade"
+        exame_contatos: "Exame de Contatos"
+        outros_modos: "Outros Modos"
+      baciloscopia:
+        positivo: "Positivo"
+        negativo: "Negativo"
+        nao_realizado: "Não Realizado"
+      esquema_terapeutico:
+        pb_infantil: "PB Infantil"
+        pb_adulto: "PB Adulto"
+        mb_infantil: "MB Infantil"
+        mb_adulto: "MB Adulto"
+        outros_esquemas: "Outros esquemas substitutivos"
+      forma_clinica:
+        i: "I - Indeterminada"
+        t: "T - Tuberculoide"
+        d: "D - Diforma"
+        v: "V - Wirchoviana"
+      forma_clinica_alta:
+        i: "I - Indeterminada"
+        t: "T - Tuberculoide"
+        d: "D - Diforma"
+        v: "V - Wirchoviana"
+      forma_clinica_suspeita:
+        i: "I - Indeterminada"
+        t: "T - Tuberculoide"
+        d: "D - Diforma"
+        v: "V - Wirchoviana"
+      classificacao_operacional:
+        multibacilar: "Multibacilar"
+        paucibacilar: "Paucibalicar"
+      classificacao_operacional_alta:
+        multibacilar: "Multibacilar"
+        paucibacilar: "Paucibalicar"
+      classificacao_operacional_suspeita:
+        multibacilar: "Multibacilar"
+        paucibacilar: "Paucibalicar"
+      nervo:
+        auricular: "Auricular"
+        mediano: "Mediano"
+        radial: "Radial"
+        ulnar: "Ulnar"
+        fibular_comum: "Fibular Comum"
+        tibial_posterior: "Tibial Posterior"
+    episodio_reacional:
+      tipo:
+        tipo_1: "Tipo 1"
+        tipo_2: "Tipo 2"
+        tipo_1_2: "Tipo 1 e 2"
+        neurites: "Neurites"
+        sem_reacao: "Sem Reação"
+    epidosios_reacionais_recidivas:
+      tipo:
+        tipo_1: "Tipo 1"
+        tipo_2: "Tipo 2"
+        tipo_1_2: "Tipo 1 e 2"
+        neurites: "Neurites"
+        sem_reacao: "Sem Reação"
+    epidosios_reacionais_recidivas_alta:
+      tipo:
+        tipo_1: "Tipo 1"
+        tipo_2: "Tipo 2"
+        tipo_1_2: "Tipo 1 e 2"
+        neurites: "Neurites"
+        sem_reacao: "Sem Reação"
+    queixa:
+      categoria:
+        olhos: "Olhos"
+        nariz: "Nariz"
+        membros_superiores: "Membros Superiores"
+        membros_inferiores: "Membros Inferiores"
+    avaliacao_notificacao:
+      classificacao_operacional:
+        multibacilar: "Multibacilar"
+        paucibacilar: "Paucibalicar"
+    imunizacao_solicitacao:
+      status:
+        solicitado: "Solicitado"
+        autorizado: "Autorizado"
+        nao_autorizado: "Não Autorizado"
+        em_analise: "Em Análise"
+        pendente: "Pendente"
+  errors:
+    messages:
+      record_invalid: 'A validação falhou: %{errors}'
+      restrict_dependent_destroy:
+        has_one: Não é possível excluir o registro pois existe um %{record} dependente
+        has_many: Não é possível excluir o registro pois existem %{record} dependentes
   date:
     abbr_day_names:
     - Dom
